# Treds-Adventure-v2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CREDITS.txt  LICENSE  README.md  SNEK example.snk  font-guide.html  game_objects.py  index.html  main.py  main.spec  objects.py  player.py  pyproject.toml  repo-guide.md  requirements-dev.txt  requirements.txt  run_game.py  setup.md  src.apk
.github/workflows/: pygbag.yml
bush/: __init__.py  animation.py  asset_handler.py  color.py  entity.py  event.py  level.py  loader.py  physics.py  timer.py  util.py  util_load.py
bush/ai/: ai.py  command.py  commander.py  controller.py  env.lua
bush/component/: __init__.py  base_component.py  input.py  physics.py  render.py
bush/components/: __init__.py  ai.py  input.py  physics.py  render.py  state_machine.py
data/: game_bindings.json  input_bindings.json  map_objects.json  music_tracks.json  player_bindings.json  player_start_positions.json  terrain.json  ui_theme.json
data/saves/: .gitignore  Donald.pkl  Jack.pkl  Joey.pkl  (+1 more)
engine/: entities.py  util.py
resources/: LICENSES.md
scripts/: test_ejecs.json
src/: custom_mapper.py  environment.py  event_objects.py  game_object.py  game_objects.py  game_state.py  globals.py  gui.py  inator.py  items.py  main.py  mapping.py  menu.py  menu_theme.py  npc.py  particle_util.py  player.py  script.py  sky.py  startup.py  static_objects.py  static_sprite.py  tool.py
tiled/: everything.world  farmplant_green.tsx  master.tsx  player.tx  tav2.tiled-project  tav2.tiled-session  test2.tmx  test_map.tmx  tree.tx  trees.tsx
(+155 files in other folders)
